--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,10 @@
             <a href="/users/sign_in">Sign In</a> -
       <% end %>
     </div>
-    <% if flash[:error] %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-<%= name == :notice ? "success" : "danger" %> alert-dismissible fade show" role="alert">
+        <%= msg %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     <% end %>
     <%= yield %>
