--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
     <div class="nav-link">
       <% if user_signed_in? %>
             <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+            <a href="/">View Gradebook</a>
       <% else %>
-            <a href="/">View Gradebook</a> -
-            <a href="/users/sign_in">Sign In</a> -
+            <a href="/users/sign_in">Sign In</a>
       <% end %>
     </div>
     <% flash.each do |name, msg| %>
